p12196 Fix tree param.